src/components/live-chat/live-chat.scss
@import "../../styles/presets";
@import "../../styles/hovers";

#live-chat-container {
  width: 90%;
  max-width: 500px;
  margin-bottom: 34px;
  margin-top: 42px;
  background-color: transparent;
  position: relative;
  box-sizing: border-box;
  transition: 400ms;

  @include mobile {
    background-color: $translucentBlack3;
    max-width: 100vw;
    width: 100vw;
  }

  #live-chat {
    background-color: $translucentBlack1;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    position: relative;
    backdrop-filter: blur(4px);
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    .chat-box-container {
      display: flex;
      align-items: center;
      margin: auto;
      width: 92%;
      box-sizing: border-box;
      border-bottom: 2px solid $bg-dark;
      background-color: $translucentBlack2;
      margin-bottom: 16px;

      @extend .rounded-border;

      .chat-box {
        padding: 8px;
        background: none;
        border: none;
        color: white;
        width: 100%;
        resize: none;
        height: 50px;
      }

      .chat-box:focus {
        outline: none;
      }

      .send-button {
        z-index: inherit;
      }
    }

    .chat-list-view {
      flex-grow: 1;
      overflow-x: auto;
      box-sizing: border-box;

      @extend .default-padding;

      .loader-container {
        display: flex;
        align-items: center;
        justify-content: center;
      }

      .no-messages {
        color: white;
        text-align: center;
        font-weight: bold;
        font-size: 16px;
      }

      .chat-bubble {
        color: white;
        display: flex;
        width: 100%;
        padding: 8px;
        box-sizing: border-box;

        @extend .circular-border;

        .image {
          height: 32px;
          width: 32px;
          margin-right: 8px;
          border-radius: 100%;
        }

        .message-block {
          .sender-name {
            font-weight: bold;

            padding-right: 8px;
          }

          .date-sent {
            display: block;
            padding-right: 8px;
            font-size: 12px;
            color: $bg-dark;
          }
        }
      }
    }

    .prompt-login {
      margin: 12px auto;
      align-self: center;
      color: white;
      background-color: $secondary;
      width: 90%;
      height: 40px;
      z-index: 0;

      @extend .clickable;
    }
  }
}

